--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
     "html-react-parser": "^3.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-icons": "^4.4.0",
     "react-material-ui-carousel": "^3.4.2",
     "react-router-dom": "^6.3.0",
     "react-router-hash-link": "^2.4.3",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
@@ -46,7 +47,8 @@
     ]
   },
   "devDependencies": {
+    "@types/react-helmet": "^6.1.11",
     "@types/react-router-hash-link": "^2.4.9",
-    "gh-pages": "^4.0.0"
+    "gh-pages": "^6.2.0"
   }
 }
