--- a/package.json
+++ b/package.json
@@ -4,26 +4,26 @@
   "homepage": "https://4lexcorrei4.github.io",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.13.3",
-    "@emotion/styled": "^11.13.0",
-    "@mui/material": "^6.1.6",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.11.41",
-    "@types/react": "^18.0.14",
-    "@types/react-dom": "^18.0.5",
-    "html-react-parser": "^3.0.6",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.6",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/jest": "^29.2.1",
+    "@types/node": "^18.17.0",
+    "@types/react": "^18.2.14",
+    "@types/react-dom": "^18.2.7",
+    "html-react-parser": "^3.0.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
-    "react-icons": "^4.4.0",
+    "react-icons": "^4.10.1",
     "react-material-ui-carousel": "^3.4.2",
-    "react-router-dom": "^6.3.0",
+    "react-router-dom": "^6.15.0",
     "react-scripts": "^5.0.1",
-    "typescript": "^4.7.4",
-    "web-vitals": "^2.1.4"
+    "typescript": "^4.9.5",
+    "web-vitals": "^3.3.0"
   },
   "scripts": {
     "predeploy": "npm run build",
@@ -48,5 +48,9 @@
   "devDependencies": {
     "@types/react-helmet": "^6.1.11",
     "gh-pages": "^6.2.0"
+  },
+  "overrides": {
+    "nth-check": "^2.0.1",
+    "postcss": "^8.4.31"
   }
 }
